# findoc

./: .env  .gitignore  Dockerfile  GEMINI.md  QWEN.md  README.md  TODO.md  docker-compose.monitoring.yml  docker-compose.yml  generate_hash.py  grafana-dashboard.json  prometheus.yml  pyproject.toml  requirements.txt  requirements_current.txt  test_prompt_manager.py
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 000000000001_initial_database_schema.py  4667b14d4ca3_add_user_model_and_add_user_id_to_.py
app/: auth.py  config.py  database.py  database_factory.py  database_sqlalchemy.py  main.py  models.py  worker.py
app/classification/: model.py
app/ingestion/: ocr.py
app/nlp/: extraction.py
app/rag/: pipeline.py
app/utils/: attention_visualization.py  file_utils.py  logging_config.py
data/: findocai.db
data/chroma/: chroma.sqlite3
docs/: 00_introduction.md  01_system_architecture.md  03_api_reference.md  api.md  architecture.md  demo-guide.md  evaluation.md  portfolio-pitch.md  tech-decisions.md  xai_implementation_plan.md
docs/02_implementation/: 01_document_ingestion.md  (+2 more)
prompts/: prompt_manager.py
scripts/: download_models.py  health_check.py  init_db.py  load_test.py  run.sh  run_alembic_migration.py  setup.sh  stop.sh
tests/: conftest.py  test_api_integration.py  test_api_validation.py  test_classification_model.py  test_database.py  test_database_sqlalchemy.py  test_deletion_functionality.py  test_ingestion_ocr.py  test_logging_improvements.py  test_nlp_extraction.py  test_prompt_manager.py  test_rag_pipeline.py
(+22 files in other folders)
